# lab16

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  release.yml
packaging/deb/: control.in
packaging/rpm/: spec.in
solver/: CMakeLists.txt  main.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver_lib.cpp  solver_lib.h
